Add different examples of greedy method, including TopologicalSort, BipartieCover, shortestPath, minSpanningTree

--- a/Graph/Graph.vcxproj
+++ b/Graph/Graph.vcxproj
@@ -67,6 +67,7 @@
     <ClInclude Include="graph.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\UnionFind\unionfind.cpp" />
     <ClCompile Include="testGraph.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
